-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.0
-
None
-
Mac OS X 10.6, Qt/Cocoa qt/4.7, 4676dd62871da2b58452ebda477a04c25158bec4
-
cde95eb
Running any network enabled app (e.g. demos/Browser.app) with MallocScribble=1 crashes.
E.g. run "MallocScribble=1 Browser.app/Contents/MacOS/Browser" from the command line.
This points to a memory issue in wlanbearer (MallocScribble fills new memory and deleted memory with a pattern),
and disallows using MallocScribble for your own Qt based app.
Backtrace:
Identifier: com.trolltech.DemoBrowser
Version: ??? (???)
Code Type: X86-64 (Native)
Parent Process: bash [32569]
Date/Time: 2010-04-20 17:36:54.664 +0200
OS Version: Mac OS X 10.6.3 (10D573)
Report Version: 6
Exception Type: EXC_BAD_ACCESS (SIGSEGV)
Exception Codes: 0x000000000000000d, 0x0000000000000000
Crashed Thread: 0 Dispatch queue: com.apple.main-thread
Application Specific Information:
objc_msgSend() selector name: release
Thread 0 Crashed: Dispatch queue: com.apple.main-thread
0 libobjc.A.dylib 0x00007fff857b011c objc_msgSend + 40
1 com.apple.CoreFoundation 0x00007fff855afd56 _CFAutoreleasePoolPop + 230
2 com.apple.Foundation 0x00007fff8669de9b -[NSAutoreleasePool release] + 158
3 libqcorewlanbearer.dylib 0x000000011910df08 QCoreWlanEngine::getUserConfigurations() + 4728
4 libqcorewlanbearer.dylib 0x000000011910f931 QCoreWlanEngine::requestUpdate() + 17
5 libqcorewlanbearer.dylib 0x0000000119115b7d QCoreWlanEngine::qt_metacall(QMetaObject::Call, int, void**) + 109
6 QtCore 0x0000000102b7d157 QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const + 1607
7 QtCore 0x0000000102b7f10c QMetaObject::invokeMethod(QObject*, char const*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) + 1324
8 QtNetwork 0x0000000101c51a45 QNetworkConfigurationManagerPrivate::updateConfigurations() + 1285
9 QtNetwork 0x0000000101c51bcf QNetworkConfigurationManagerPrivate::QNetworkConfigurationManagerPrivate() + 175
10 QtNetwork 0x0000000101c4fc75 connManager() + 85
11 QtNetwork 0x0000000101c4feff QNetworkConfigurationManager::QNetworkConfigurationManager(QObject*) + 31
12 QtWebKit 0x0000000100c1ad33 WebCore::NetworkStateNotifierPrivate::NetworkStateNotifierPrivate(WebCore::NetworkStateNotifier*) + 67
13 QtWebKit 0x0000000100c1ade6 WebCore::NetworkStateNotifier::NetworkStateNotifier() + 54
14 QtWebKit 0x0000000100982df5 WebCore::networkStateNotifier() + 101
15 QtWebKit 0x000000010092b8b9 WebCore::Page::Page(WebCore::ChromeClient*, WebCore::ContextMenuClient*, WebCore::EditorClient*, WebCore::DragClient*, WebCore::InspectorClient*, WebCore::PluginHalterClient*, WebCore::GeolocationControllerClient*) + 921
16 QtWebKit 0x0000000100b03ed6 QWebPagePrivate::QWebPagePrivate(QWebPage*) + 518
17 QtWebKit 0x0000000100b0aa32 QWebPage::QWebPage(QObject*) + 66
18 com.trolltech.DemoBrowser 0x00000001000490dc WebPage::WebPage(QObject*) + 28
19 com.trolltech.DemoBrowser 0x0000000100049337 WebView::WebView(QWidget*) + 103
20 com.trolltech.DemoBrowser 0x0000000100042e4d TabWidget::newTab(bool) + 477
21 com.trolltech.DemoBrowser 0x00000001000434c7 TabWidget::webView(int) const + 87
22 com.trolltech.DemoBrowser 0x0000000100010703 BrowserMainWindow::loadUrl(QUrl const&) + 35
23 com.trolltech.DemoBrowser 0x000000010001082a BrowserMainWindow::loadPage(QString const&) + 42
24 com.trolltech.DemoBrowser 0x0000000100010951 BrowserMainWindow::slotHome() + 257
25 com.trolltech.DemoBrowser 0x000000010000ee64 BrowserApplication::postLaunch() + 692
26 com.trolltech.DemoBrowser 0x000000010004dd6c BrowserApplication::qt_metacall(QMetaObject::Call, int, void**) + 188
27 QtCore 0x0000000102b8594c QObject::event(QEvent*) + 1084
28 QtCore 0x0000000102b78080 QCoreApplication::event(QEvent*) + 16
29 QtGui 0x0000000101e5d7ff QApplication::event(QEvent*) + 63
30 com.trolltech.DemoBrowser 0x000000010000dcdf BrowserApplication::event(QEvent*) + 47
31 QtGui 0x0000000101e56dfd QApplicationPrivate::notify_helper(QObject*, QEvent*) + 189
32 QtGui 0x0000000101e5e90e QApplication::notify(QObject*, QEvent*) + 2094
33 QtCore 0x0000000102a9d58c QCoreApplication::notifyInternal(QObject*, QEvent*) + 124
34 QtCore 0x0000000102b7895d QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 701
35 com.apple.CoreFoundation 0x00007fff855eb0d7 __CFRunLoopDoObservers + 519
36 com.apple.CoreFoundation 0x00007fff855c68c4 CFRunLoopRunSpecific + 548
37 com.apple.HIToolbox 0x00007fff82126ada RunCurrentEventLoopInMode + 333
38 com.apple.HIToolbox 0x00007fff8212683d ReceiveNextEventCommon + 148
39 com.apple.HIToolbox 0x00007fff82126798 BlockUntilNextEventMatchingListInMode + 59
40 com.apple.AppKit 0x00007fff831f8a2a _DPSNextEvent + 708
41 com.apple.AppKit 0x00007fff831f8379 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 155
42 com.apple.AppKit 0x00007fff831be05b -[NSApplication run] + 395
43 QtGui 0x0000000101e13ea4 QEventDispatcherMac::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 1588
44 QtCore 0x0000000102b77304 QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 68
45 QtCore 0x0000000102b77614 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 180
46 QtCore 0x0000000102b78c5c QCoreApplication::exec() + 188
47 com.trolltech.DemoBrowser 0x000000010004ce52 main + 66
48 com.trolltech.DemoBrowser 0x0000000100002e48 start + 52
- relates to
-
QTBUG-10268 QCoreWlanEngine is leaky on Mac
-
- Closed
-