fix memory bug

fixes using MallocScribble crash

Task-number: QTBUG-10068